Replace .collect(collector.toList) with .toList @ EventService